plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

group 'io.github.eaxdev'
version '0.0.1'

compileJava {
    options.compilerArgs += ['--enable-preview']
}

compileTestJava {
    options.compilerArgs += ['--enable-preview']
}

repositories {
    mavenCentral()
}